--- a/php/src/application/layouts/scripts/layout.phtml
+++ b/php/src/application/layouts/scripts/layout.phtml
@@ -26,36 +26,43 @@
 </head> 
 <body>
 
-<div class="wrapper">
-    <div class="banner"></div>
-    <a title="Home page of TechnoParkCorp.com" href="<?=$this->staticUrl('home')?>" class="logo"></a>
+    <div class="wrapper">
+        <div class="banner"></div>
+        <a title="Home page of TechnoParkCorp.com" href="<?=$this->staticUrl('home')?>" class="logo"></a>
 
-    <div class="tl">
-        <a title="Facts, history, key achievements or TechnoPark Corp." href="<?=$this->staticUrl('about')?>" class="t1"></a>
-        <a title="Our approach to time/cost/scope and risk management" href="<?=$this->staticUrl('process')?>" class="t2"></a>
-        <a title="List of the latest projects with technical and management details" href="<?=$this->staticUrl('stories')?>" class="t3"></a>
-        <a title="Our strength is in our inventions" href="<?=$this->staticUrl('innovations')?>" class="t4"></a>
-        <a title="Email, phone, fax and online contacts" href="<?=$this->staticUrl('contacts')?>" class="t5"></a>
+        <p class="tl">
+            <a title="Facts, history, key achievements or TechnoPark Corp." 
+                href="<?=$this->staticUrl('about')?>" class="t1">About us</a>
+            <a title="Our approach to time/cost/scope and risk management" 
+                href="<?=$this->staticUrl('process')?>" class="t2">Process</a>
+            <a title="List of the latest projects with technical and management details" 
+                href="<?=$this->staticUrl('stories')?>" class="t3">Success stories</a>
+            <a title="Our strength is in our inventions" 
+                href="<?=$this->staticUrl('innovations')?>" class="t4">Innovations</a>
+            <a title="Email, phone, fax and online contacts" 
+                href="<?=$this->staticUrl('contacts')?>" class="t5">Contacts</a>
+        </p>
+
+        <div class="contents">
+            <?=$this->layout()->content?>
+        </div>
+
+        <p class="bl">
+            <a title="Full list of site pages in hierarchical order" 
+                href="<?=$this->staticUrl('about/sitemap')?>" class="t1">Site Map</a>
+            <a title="Legal terms of use of the site" 
+                href="<?=$this->staticUrl('about/legalnotes')?>" class="t2">Legal Notes</a>
+            <a title="Privacy policy for Personally Identifiable Information(PII)" 
+                href="<?=$this->staticUrl('about/privacypolicy')?>" class="t3">Privacy Policy</a>
+        </p>
+
+        <p class="sub">
+            &copy; TechnoPark Corp., <?=date('Y')?>, <?=$this->pageLoadTime()?>
+            <a title="Read more about ISO 9001:2000 certification that was obtained by TechnoPark Corp." 
+                href="<?=$this->staticUrl('about/news/year2008/iso9001')?>" class="iso"></a>
+        </p>
     </div>
 
-    <div class="contents">
-        <?=$this->layout()->content?>
-    </div>
-
-    <div class="bl">
-        <a title="Full list of site pages in hierarchical order" href="<?=$this->staticUrl('about/sitemap')?>" class="t1"></a>
-        <a title="Legal terms of use of the site" href="<?=$this->staticUrl('about/legalnotes')?>" class="t2"></a>
-        <a title="Privacy policy for Personally Identifiable Information(PII)" href="<?=$this->staticUrl('about/privacypolicy')?>" class="t3"></a>
-    </div>
-
-    <div class="sub">
-        &copy; TechnoPark Corp., <?=date('Y')?>, <?=$this->pageLoadTime()?>
-        <a title="Read more about ISO 9001:2000 certification that was obtained by TechnoPark Corp." 
-            href="<?=$this->staticUrl('about/news/year2008/iso9001')?>" class="iso"></a>
-    </div>
-</div>
-
-<?=$this->headScript() ?>
-<?=$this->googleAnalytics()?>
-</body>
-</html>
+    <?=$this->headScript() ?>
+    <?=$this->googleAnalytics()?>
+</body></html>
