--- a/php/src/application/pages/projects/_any/Time/Schedule.phtml
+++ b/php/src/application/pages/projects/_any/Time/Schedule.phtml
@@ -9,4 +9,5 @@
     ->addColumn('cost', 'Cost')
     ->addColumn('duration', 'Duration')
     ->addColumn('performer', 'Performer')
+    ->addColumn('startDate', 'Start')
     ?>
