--- a/php/src/application/pages/projects/_any/Scope/WBS/_any.phtml
+++ b/php/src/application/pages/projects/_any/Scope/WBS/_any.phtml
@@ -70,7 +70,8 @@
         <? $criteria = $this->activity->criteria ?>
     <? endif; ?>
 
-    <h1>Activity</h1>
+    <h1>Activity (<?=$this->activity->criteria->isTrue($this->project) ? 
+        'completed' : 'not completed yet' ?>)</h1>
 
     <?=$this->activity->criteria->asHtml($this->project)?>
 
