wiki RPC intro. works

--- a/php/src/application/pages/projects/_any/Scope.phtml
+++ b/php/src/application/pages/projects/_any/Scope.phtml
@@ -1,5 +1,7 @@
 <h1>Scope Management</h1>
 
 <?=$this->bar()
+    ->setStyle('stairs')
     ->addLink('WBS', 'Work Breakdown Structure (WBS)')
+    ->addLink('SRS', 'Software Requirements Specification (SRS)')
     ?>
