--- a/php/src/application/pages/projects/_any/Time/GanttChart.phtml
+++ b/php/src/application/pages/projects/_any/Time/GanttChart.phtml
@@ -3,41 +3,70 @@
 <h1>Gantt Chart</h1>
 
 <? $finish = $this->project->schedule->finish->setWeekday(7) ?>
-<? $start = Zend_Date::now()
-    ->setWeekday(1)
+<? $start = new FaZend_Date(Zend_Date::now()
     ->setHour(0)
-    ->setMinute(0) ?>
+    ->setMinute(0)) ?>
+<? $increment = Zend_Date::DAY ?>
+<? if ($increment == Zend_Date::WEEK) $start->setWeekday(1) ?>
+<? $date = clone $start; ?>
 
 <p>Start on <?=$start->get(Zend_Date::DATE_SHORT)?>, finish estimated on <?=$finish->get(Zend_Date::DATE_SHORT)?>.</p>
 
 <table class="chart">
 <tr>
-    <th>Activity</th>
-    <th>Cost</th>
+    <td><!-- activity --></td>
+    <td><!-- cost --></td>
+    <td><!-- days --></td>
+    <td><!-- preds --></td>
+    <td><!-- criteria --></td>
+    <? 
+    $date->set($start);
+    $currentMonth = $date->get(Zend_Date::MONTH_NAME_SHORT); 
+    $i = 0;
+    do {
+        $date->add(1, $increment);
+        $i++;
+        
+        if (($date->get(Zend_Date::MONTH_NAME_SHORT) != $currentMonth)
+        || !$date->isEarlier($finish)) {
+            echo "<th colspan='{$i}' halign='center'>{$currentMonth}</th>";
+            $i = 0;
+        }
+        $currentMonth = $date->get(Zend_Date::MONTH_NAME_SHORT);
+    } while ($date->isEarlier($finish));
+    ?>
+</tr>
+<tr>
+    <th style="width: 280px !important;">Activity</th>
+    <th width="70px">Cost</th>
     <th>Days</th>
     <th>Preds</th>
+    <th>Crit.</th>
 
-    <? for ($d = clone $start; $d < $finish; $d->add(1, Zend_Date::WEEK)): ?>
-        <th><?=$d->get(Zend_Date::WEEK)?></th>
+    <? for ($date->set($start); $date->isEarlier($finish); $date->add(1, $increment)): ?>
+        <th><?=$date->get($increment)?></th>
     <? endfor; ?>
 </tr>
+
+<? $weekEnd = new FaZend_Date() ?>
 <? foreach ($this->project->schedule->activities as $activity): ?>
 <tr>
-    <td><?=$activity->sow?></td>
+    <td><?=cutLongLine($activity->sow, 50)?></td>
     <td><?=$activity->cost?></td>
     <td><?=$activity->duration?></td>
     <td><?=count($activity->predecessors)?></td>
+    <td><?=count($activity->criteria)?></td>
     
-    <? for ($d = clone $start; $d < $finish; $d->add(1, Zend_Date::WEEK)): ?>
-        <? $weekEnd = clone $d; $weekEnd->add(1, Zend_Date::WEEK)?>
+    <? for ($date->set($start); $date->isEarlier($finish); $date->add(1, $increment)): ?>
+        <? $weekEnd->set($date); $weekEnd->add(1, $increment)?>
         <td
         <? if (
             // start of this week is inside the activity
-            ($d->isLater($activity->start) && $d->isEarlier($activity->finish))
+            $date->isBetween($activity->start, $activity->finish)
             // end of this week is inside the activity
-            || ($weekEnd->isLater($activity->start) && $weekEnd->isEarlier($activity->finish))
+            || $weekEnd->isBetween($activity->start, $activity->finish)
             // start and end are inside this week
-            || ($activity->start->isLater($d) && $activity->finish->isEarlier($weekEnd))
+            || $activity->start->isBetween($date, $weekEnd)
             ): ?>
             class="<?=$activity->cost ? 'busy' : 'milestone'?>"
         <? endif; ?>
