centralized holder of deliverables intro

--- a/php/src/application/pages/projects/_any/Scope.phtml
+++ b/php/src/application/pages/projects/_any/Scope.phtml
@@ -4,4 +4,6 @@
     ->setStyle('stairs')
     ->addLink('WBS', 'Work Breakdown Structure (WBS)')
     ->addLink('SRS', 'Software Requirements Specification (SRS)')
+    ->addLink('DesignModel', 'Design Model')
+    ->addLink('AnalysisModel', 'Analysis Model')
     ?>
