--- a/php/src/application/pages/projects/_any/Scope/DesignModel/Files.phtml
+++ b/php/src/application/pages/projects/_any/Scope/DesignModel/Files.phtml
@@ -1,7 +1,7 @@
-<h1>Quality of Service (QOS)</h1>
+<h1>Files</h1>
 
 <?=$this->table()
-    ->setSource($this->project->deliverables->qos)
+    ->setSource($this->project->deliverables->files)
     ->addColumn('name', 'Name')
     ->addColumn('description', 'Description')
     ->addColumn('attributes', 'Attributes')
