--- a/php/src/application/pages/projects/_any/Scope/SRS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS.phtml
@@ -1,4 +1,4 @@
-<?=$this->publish($this->project->srs)?>
+<?=$this->publish($this->project->deliverables)?>
 
 <h1>Software Requirements Specification (SRS)</h1>
 
