--- a/php/src/application/pages/projects/_any/Scope/SRS/Actors.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS/Actors.phtml
@@ -1,7 +1,7 @@
 <h1>Actors</h1>
 
 <?=$this->table()
-    ->setSource($this->project->srs->actors)
+    ->setSource($this->project->deliverables->actors)
     ->addColumn('name', 'Name')
     ->addColumn('description', 'Description')
     ->addColumn('attributes', 'Attributes')
