PMO functionality introduced

--- a/php/src/application/pages/_access.phtml
+++ b/php/src/application/pages/_access.phtml
@@ -7,3 +7,6 @@
 <?=Model_Pages::ADMIN?> = rw
 <?=Model_Project_Test::PM?> = r
 
+[PMO]
+<?=Model_Pages::ADMIN?> = rw
+<?=Model_Project_Test::PM?> = r
