--- a/php/src/application/pages/PMO/Suppliers/everybody.phtml
+++ b/php/src/application/pages/PMO/Suppliers/everybody.phtml
@@ -4,6 +4,7 @@
     ->setSource($this->registry->getEverybody())
     ->addColumn('email', 'Email')
     ->addColumn('name', 'Full name')
+    ->addColumn('countryName', 'Country')
     
     ->addOption('email', '../byEmail/{email}')
     ?>
