--- a/php/src/application/pages/PMO/Suppliers/byEmail/_any/ability/_any/_init.phtml
+++ b/php/src/application/pages/PMO/Suppliers/byEmail/_any/ability/_any/_init.phtml
@@ -1,1 +1,1 @@
-<? $this->ability = $this->supplier->findAbilityById($this->segment(5))?>
+<? $this->ability = $this->supplier->roles[$this->segment(5)]?>
