--- a/php/src/application/pages/PMO/Suppliers/byEmail/_any/skill/_any/_init.phtml
+++ b/php/src/application/pages/PMO/Suppliers/byEmail/_any/skill/_any/_init.phtml
@@ -1,1 +1,1 @@
-<? $this->skill = $this->supplier->findSkillById($this->segment(5))?>
+<? $this->skill = $this->supplier->skills[$this->segment(5)]?>
