--- a/php/src/application/pages/PMO/Suppliers/everybody.phtml
+++ b/php/src/application/pages/PMO/Suppliers/everybody.phtml
@@ -6,5 +6,5 @@
     ->addColumn('name', 'Full name')
     ->addColumn('country', 'Country')
     
-    ->addOption('email', '../byEmail/{email}')
+    ->addOption('__key', '../byEmail/{email}')
     ?>
