--- a/php/src/application/pages/projects.phtml
+++ b/php/src/application/pages/projects.phtml
@@ -1,4 +1,4 @@
-<p>Full list of projects:</p>
+<p><?=_('Full list of projects:')?></p>
 
 <?=$this->gallery()
     ->setSource($this->root->projectRegistry)
