got rid of ticket() completely RU translation introduced

--- a/php/src/application/layouts/scripts/panel.phtml
+++ b/php/src/application/layouts/scripts/panel.phtml
@@ -1,5 +1,8 @@
 <?
 
+    $this->headMeta()
+        ->appendHttpEquiv('Content-Type', 'text/html; charset=utf-8');
+
     $this->includeCSS('panel.css');
     $this->includeJQuery();
     $this->headTitle('thePanel');
