--- a/php/src/application/pages/projects/_any/Scope/WBS/_any.phtml
+++ b/php/src/application/pages/projects/_any/Scope/WBS/_any.phtml
@@ -59,7 +59,7 @@
         
     <h2>Synopsis</h2>
     
-    <?=ticket('PM/scope/WBS/' . $this->wp->code)?>
+    <p><?=$this->wp->code?></p>
         
 <!-- activity to show -->
 <? else: ?>
