--- a/php/src/application/pages/projects/_any.phtml
+++ b/php/src/application/pages/projects/_any.phtml
@@ -1,4 +1,4 @@
-<h1>Project "<?=$this->project->name?>"</h1>
+<h1><?=_('Project "%s"', $this->project->name)?></h1>
 
 <?=$this->bar()
     ->setStyle('stairs')
