--- a/php/src/application/views/scripts/panel/restrict.phtml
+++ b/php/src/application/views/scripts/panel/restrict.phtml
@@ -21,10 +21,7 @@
         
 <? else: ?>
 
-    <p>You don't have enough access permissions to access this
-        management panel, although your email (<tt><?=Model_User::me()->email?></tt>) is registered
-        in one of the projects we manage. Refer to the sponsor or
-        the project manager of your project for obtaining required access
-        rights. Sorry for any inconveniences.</p>
+    <p><?=_('You don\'t have enough access permissions to access this management panel, although your email (<tt>%s</tt>) is registered in one of the projects we manage. Refer to the sponsor or the project manager of your project for obtaining required access rights. Sorry for any inconveniences.',
+        Model_User::me()->email)?></p>
 
 <? endif; ?>
