--- a/php/src/application/pages/projects/_any/Scope/SRS/Functional.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS/Functional.phtml
@@ -1,9 +1,9 @@
-<h1>Functional Requirements</h1>
+<h1><?=_('Functional Requirements')?></h1>
 
 <?=$this->table()
     ->setSource($this->project->deliverables->functional)
-    ->addColumn('name', 'Name')
-    ->addColumn('description', 'Description')
-    ->addColumn('attributes', 'Attributes')
+    ->addColumn('name', _('Name'))
+    ->addColumn('description', _('Description'))
+    ->addColumn('attributes', _('Attributes'))
     ?>
     
