better processing of SRS

--- a/php/src/application/pages/projects/_any/Scope/SRS/Glossary.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS/Glossary.phtml
@@ -1,7 +1,7 @@
-<h1><?=_('Quality of Service (QOS)')?></h1>
+<h1><?=_('Glossary')?></h1>
 
 <?=$this->table()
-    ->setSource($this->project->deliverables->qos)
+    ->setSource($this->project->deliverables->glossary)
     ->addColumn('name', _('Name'))
     ->addColumn('description', _('Description'))
     ->addColumn('attributes', _('Attributes'))
