--- a/php/src/application/pages/projects/_any/Scope/SRS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS.phtml
@@ -7,6 +7,7 @@
     ->addLink('Actors', 'Actors')
     ->addLink('Interfaces', 'Interfaces')
     ->addLink('Glossary', 'Glossary')
+    ->addLink('UseCases', 'Use Cases')
     ->addLink('Functional', 'Functional Requirements')
     ->addLink('QOS', 'Quality of Service')
     ?>
