CSS polished a bit

--- a/php/src/application/views/scripts/css/panel.css
+++ b/php/src/application/views/scripts/css/panel.css
@@ -98,6 +98,10 @@ select {
             background: <?=Model_Colors::BLUE?>;
         }
 
+    input.file {
+        border: none;
+    }
+    
 span.formula {
     font-family: Times;
     font-size: 1.3em;
