--- a/php/src/application/pages/Finance/Cash/Statements.phtml
+++ b/php/src/application/pages/Finance/Cash/Statements.phtml
@@ -1,9 +1,14 @@
 <h1>Statements</h1>
 
+<?=$this->bar()
+    ->addLink('create', 'Create new payment')
+    ?>
+
 <?=$this->table()
     ->setSource($this->root->statements)
-    ->addColumn('__key', 'Email')
+    ->addColumn('supplier', 'Email')
     ->addColumn('balance', 'Balance')
-    ->addOption('target', '{id}')
+    ->addColumn('volume', 'Volume')
+    ->addOption('supplier', '{supplier}')
     ?>
     
