--- a/php/src/application/layouts/scripts/layout.phtml
+++ b/php/src/application/layouts/scripts/layout.phtml
@@ -57,7 +57,8 @@
         </p>
 
         <p class="sub">
-            &copy; TechnoPark Corp., <?=date('Y')?>, <?=$this->pageLoadTime()?>
+            &copy; TechnoPark Corp., <?=date('Y')?>, 
+            rev.<?=FaZend_Revision::get()?>, <?=$this->pageLoadTime()?>
             <a title="Read more about ISO 9001:2000 certification that was obtained by TechnoPark Corp." 
                 href="<?=$this->staticUrl('about/news/year2008/iso9001')?>" class="iso"></a>
         </p>
