minor changes in cash management

--- a/php/src/application/pages/Finance/Cash/Statements/_any.phtml
+++ b/php/src/application/pages/Finance/Cash/Statements/_any.phtml
@@ -10,6 +10,7 @@
     ->setSource($statement)
     ->addColumn('created', 'Date')
     ->addColumn('getUsd', 'Amount')
+    ->addColumn('rate', 'Rate')
     ->addColumn('context', 'Context')
     ->addColumn('reason', 'Reason')
     ->addColumn('details', 'Details')
